# confusion

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/bigaussian/: evaluate.py  train.py
examples/bigaussian/configs/: __init__.py  edm.py  flow.py  ve.py  vp.py
examples/gaussian/: evaluate.py  reference.py  train.py
examples/gaussian/configs/: __init__.py  edm.py  flow.py  ve.py  vp.py
examples/lorenz/: config.py  dynamics.py  eval.py  train.py
examples/mnist/: evaluate.py  train.py  utils.py
examples/mnist/configs/: __init__.py  conditional_mixer.py  conditional_unet.py  unconditional_mixer.py  unconditional_unet.py
examples/mnist_deprecated/: evaluate.py  utils.py
examples/mnist_deprecated/configs/: conditional_mixer.py  conditional_unet.py  unconditional_mixer.py  unconditional_unet.py
examples/sine_cosine/: evaluate.py  reference.py  train.py
examples/sine_cosine/configs/: __init__.py  ve.py
examples/toy/: evaluate.py  reference.py  train.py
examples/toy/configs/: __init__.py  edm.py  ve.py  vp.py
examples/toy_model/: evaluate.py  experiment.py  reference.py  train.py
examples/toy_model/configs/: __init__.py  cve.py  cvp.py  ve.py  vp.py  vp_mlp.py
projects/bgc/toy/: evaluate.py  reference.py  train.py
src/confusion/: checkpointing.py  diffusion.py  evaluation.py  guidance.py  logging.py  losses.py  metrics.py  sampling.py  schedules.py  sdes.py  training.py  utils.py  weighting.py
src/confusion/diffeqs/: __init__.py  abstract.py  odes.py  sdes.py
test/confusion/: test_schedules.py
tests/confusion/: structure.py
(+21 files in other folders)
