[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


[project]
name = "confusion"
version = "0.1.0"
description = "Conditional diffusion in JAX."
readme = "README.md"
authors = [
    { name = "Mauricio Lima", email = "mlima@bgc-jena.mpg.de" }
]
dependencies = [
    "diffrax",
    "einops",
    "equinox",
    "jax",
    "matplotlib",
    "optax",
    "orbax",
]

[tool.ruff.lint]
ignore = ["E731", "F722"]
